objects/CC_Liveagent_Routing_Rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CustomerOrgAccNum__c</fullName>
        <label>Customer #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Ids__c</fullName>
        <label>Primary Button Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Id__c</fullName>
        <label>Sales Org Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Customer Care Live Agent Routing Rules</label>
    <listViews>
        <fullName>ALL_APAC</fullName>
        <columns>NAME</columns>
        <columns>CustomerOrgAccNum__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Primary_Button_Ids__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>ALL APAC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_EMEA_1</fullName>
        <columns>NAME</columns>
        <columns>CustomerOrgAccNum__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Primary_Button_Ids__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>ALL EMEA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_AMER</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CustomerOrgAccNum__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Primary_Button_Ids__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AMER</value>
        </filters>
        <label>All AMER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Rules</fullName>
        <columns>NAME</columns>
        <columns>CustomerOrgAccNum__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Primary_Button_Ids__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Routing_Search</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CustomerOrgAccNum__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Primary_Button_Ids__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerOrgAccNum__c</field>
            <operation>contains</operation>
            <value>2980376</value>
        </filters>
        <label>Routing Search</label>
        <language>en_US</language>
    </listViews>
</CustomObject>